<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".CadastroUsuarioActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants">

        <TextView
            android:id="@+id/tv_cadastroUsuarioTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/novoUsuario"
            android:textSize="@dimen/big_title"/>

        <EditText
            android:id="@+id/et_emailNovoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/tv_cadastroUsuarioTitulo"
            android:layout_marginTop="@dimen/huge_space"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/normal_text"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            tools:targetApi="o" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/et_emailNovoUsuario"
            android:layout_marginTop="@dimen/big_space"
            android:id="@+id/et_nomeNovoUsuario"
            android:inputType="text"
            android:textSize="@dimen/normal_text"
            android:hint="@string/nome"
            android:autofillHints="name"
            tools:targetApi="o"/>

        <EditText
            android:id="@+id/et_senhaNovoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_nomeNovoUsuario"
            android:inputType="textPassword"
            android:textSize="@dimen/normal_text"
            android:hint="@string/senha"
            android:layout_marginTop="@dimen/big_space"
            android:autofillHints="password"
            tools:targetApi="o"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_senhaNovoUsuario"
            android:id="@+id/et_confirmarSenhaNovoUsuario"
            android:inputType="textPassword"
            android:textSize="@dimen/normal_text"
            android:layout_marginTop="@dimen/big_space"
            android:hint="@string/senhaConfirm"
            android:autofillHints="password"
            tools:targetApi="o"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cb_mostrarSenhaNovoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_confirmarSenhaNovoUsuario"
            android:text="@string/mostrarSenha"
            android:textSize="@dimen/small_text" />

        <ProgressBar
            android:id="@+id/pb_loadingNovoUsuario"
            android:layout_height="@dimen/add_button_size"
            android:layout_width="@dimen/add_button_size"
            android:layout_alignTop="@id/btn_cadastrarUsuario"
            android:layout_centerHorizontal="true"
            android:visibility="invisible" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_cadastrarUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cb_mostrarSenhaNovoUsuario"
            android:layout_marginTop="@dimen/huge_space"
            android:layout_centerHorizontal="true"
            android:text="@string/cadastrar_se"
            android:padding="@dimen/normal_space"
            android:textSize="@dimen/normal_text"
            app:backgroundTint="@color/success"
            android:textColor="@android:color/background_light"/>
    </RelativeLayout>
</ScrollView>